@@ -1,3 +1,6 @@
+ftransc 5.1.4 (10 Aug 2015):
+	+ code cleanup.
+
 ftransc 5.1.3 (09 Aug 2015):
 	+ fixed working out ffmpeg/avconv utility
 
